--- a/styles.css
+++ b/styles.css
@@ -4,33 +4,30 @@
   box-sizing: border-box;
 }
 
-.box1 {
-  background-color: red;
-}
 .box2 {
   background-color: chocolate;
-}
-.box3 {
-  background-color: green;
+  grid-column: span 3;
+  grid-row: span 3;
 }
 .box4 {
-  background-color: yellow;
+  padding: 40px;
+  grid-row: span 2;
 }
 .box5 {
-  background-color: cadetblue;
+  padding: 40px;
+  grid-row: span 2;
+} 
+
+.box {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
-.box6 {
-  background-color: rgb(42, 55, 167);
-}
-.box7 {
-  background-color: rgb(124, 118, 38);
-}
-.box8 {
-  background-color: rgb(94, 15, 110);
-}
-.box9 {
-  background-color: rgb(214, 18, 110);
-}
-.box10 {
-  background-color: rgb(105, 103, 182);
+
+.grid {
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 300px);
+  grid-template-rows: repeat(4, 200px);
+  gap: 15px;
 }
